Prepare for GitHub and Render deployment

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
-# Database
-MONGODB_URI=mongodb://localhost:27017/zeyadmath
+# Database - PostgreSQL
+DB_USERNAME=postgres
+DB_PASSWORD=your-password-here
+DB_NAME=zeyadmath_dev
+DB_HOST=localhost
+DB_PORT=5432
+
+# Production database (Render PostgreSQL)
+DATABASE_URL=postgresql://user:password@host:port/database
 
 # JWT
 JWT_SECRET=your-secret-key-here
