--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.6.3",
+    "pg": "^8.11.3",
+    "sequelize": "^6.35.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
@@ -33,7 +34,8 @@
     "supertest": "^6.3.3",
     "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.0"
+    "eslint-plugin-import": "^2.29.0",
+    "sequelize-cli": "^6.6.2"
   },
   "engines": {
     "node": ">=14.0.0"
