--- a/render.yaml
+++ b/render.yaml
@@ -11,11 +11,20 @@ services:
         value: 18.17.0
       - key: NODE_ENV
         value: production
-      - key: MONGODB_URI
-        sync: false
+      - key: DATABASE_URL
+        fromDatabase:
+          name: zeyadmath-db
+          property: connectionString
       - key: JWT_SECRET
         generateValue: true
       - key: PORT
         value: 3000
     healthCheckPath: /api/health
     autoDeploy: true
+
+databases:
+  # PostgreSQL database
+  - name: zeyadmath-db
+    plan: free
+    databaseName: zeyadmath_production
+    user: zeyadmath
